# dumb-data-films

./: data-exploration.qmd  main.py  pyproject.toml  titles_pre_workshop_cleaning.ipynb
data/cleaned/: imdb-title-matches.csv  jhu-titles.csv
docs/: data-exploration.html  index.html  search.json
